[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/images-removebg-preview.png" type="Texture" id=1]
[ext_resource path="res://src/Actors/Boss.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 68, 76 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 73, 84 )

[node name="Boss" type="KinematicBody2D"]
collision_layer = 16
script = ExtResource( 2 )

[node name="HP" type="ProgressBar" parent="."]
margin_left = -88.0
margin_top = -107.0
margin_right = 90.0
margin_bottom = -93.0
max_value = 400.0
value = 400.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="images-removebg-preview" type="Sprite" parent="."]
rotation = -1.5708
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="GunBarrel" type="Node2D" parent="."]
position = Vector2( -56.5685, 26.163 )

[node name="GunBarrel2" type="Node2D" parent="."]
position = Vector2( 41.0122, 26.163 )

[node name="LaserBarrel" type="Node2D" parent="."]
position = Vector2( -3.53554, 72.1249 )

[node name="BulletDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="BulletDetector"]
shape = SubResource( 2 )
[connection signal="area_entered" from="BulletDetector" to="." method="_on_Area2D_area_entered"]
